# homelab-auth

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  Taskfile.yml  cspell.config.yaml  pyproject.toml  renovate.json  service_definition.yaml
.continue/mcpServers/: zenable.yaml
.cursor/rules/: project.mdc  testing.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  project.yml
.github/actions/bootstrap/: action.yml
.github/etc/: dictionary.txt
.github/workflows/: ci.yml  commit.yml  publish-docker.yml  release.yml  security.yml  update.yml
docs/: RUNTIME_ERROR_PREVENTION.md  SECURITY_REVIEW.md
examples/: config.yaml  docker-compose.yml  traefik-middleware.yaml
src/: config.yaml  login_template.html.j2  main.py  users.htpasswd
src/homelab_auth/: __init__.py  config.py  constants.py
support/: config.yaml  entrypoint.sh
tests/: test_config.py  test_integration.py  test_main.py  test_package.py
